language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_no_affect_other_comment.snap
---
source: language-server/src/tests/action.rs
expression: "// wibble\n\n// wobble\nfn wibble() {\n    todo\n}"
---
----- BEFORE ACTION
// wibble

// wobble
   ↑     
fn wibble() {
    todo
}


----- AFTER ACTION
// wibble

/// wobble
fn wibble() {
    todo
}
