language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_on_constant.snap
---
source: language-server/src/tests/action.rs
expression: "// wobble\nconst wibble: Int = 42"
---
----- BEFORE ACTION
// wobble
   ↑     
const wibble: Int = 42


----- AFTER ACTION
/// wobble
const wibble: Int = 42
