language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_on_function.snap
---
source: language-server/src/tests/action.rs
expression: "// wobble\nfn wibble() {\n    todo\n}"
---
----- BEFORE ACTION
// wobble
   ↑     
fn wibble() {
    todo
}


----- AFTER ACTION
/// wobble
fn wibble() {
    todo
}
