language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_on_record_label_definition.snap
---
source: language-server/src/tests/action.rs
expression: "type Wibble {\n    Wibble(\n        // wobble\n        wibble: Int,\n    )\n}"
---
----- BEFORE ACTION
type Wibble {
    Wibble(
        // wobble
           ↑     
        wibble: Int,
    )
}


----- AFTER ACTION
type Wibble {
    Wibble(
        /// wobble
        wibble: Int,
    )
}
