language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_on_type.snap
---
source: language-server/src/tests/action.rs
expression: "// wobble\ntype Wibble {\n    Wibble\n}"
---
----- BEFORE ACTION
// wobble
   ↑     
type Wibble {
    Wibble
}


----- AFTER ACTION
/// wobble
type Wibble {
    Wibble
}
