language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_on_type_alias.snap
---
source: language-server/src/tests/action.rs
expression: "// wobble\ntype Wibble = Int"
---
----- BEFORE ACTION
// wobble
   ↑     
type Wibble = Int


----- AFTER ACTION
/// wobble
type Wibble = Int
