language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_to_doc_comment_on_variant_constructor_definition.snap
---
source: language-server/src/tests/action.rs
expression: "type Wibble {\n    // wobble\n    Wibble(Int)\n}"
---
----- BEFORE ACTION
type Wibble {
    // wobble
       ↑     
    Wibble(Int)
}


----- AFTER ACTION
type Wibble {
    /// wobble
    Wibble(Int)
}
